# jord

./: .gitignore  .hindent.yaml  .travis.yml  ChangeLog.md  LICENSE  README.md  jord.cabal  package.yaml  stack-8.2.2.yaml  stack-travis.yaml  stack.yaml
.github/workflows/: ci.yaml
app/: Eval.hs  Main.hs  Show.hs  State.hs
benchmarks/: BearingBG.hs  ConversionBG.hs  GeodesicBG.hs  GeodeticBG.hs  GeodeticsBG.hs  GreatCircleBG.hs  KinematicsBG.hs  Main.hs  PositionBG.hs  PositionsBG.hs  TransformationBG.hs
examples/: Main.hs
resources/: ellipsoids.txt  models.txt  transformations.txt
src/Data/Geo/: Jord.hs
src/Data/Geo/Jord/: Angle.hs  AngularPosition.hs  Bearing.hs  Bodies.hs  Conversion.hs  Duration.hs  Earth.hs  Ecef.hs  EcefPosition.hs  Ellipsoid.hs  Ellipsoidal.hs  Ellipsoids.hs  Eval.hs  Frames.hs  GeoPos.hs  Geocentric.hs  Geodesic.hs  Geodetic.hs  Geodetics.hs  GreatCircle.hs  HorizontalPosition.hs  Internal.hs  Kinematics.hs  LatLong.hs  Length.hs  Local.hs  LocalFrames.hs  Math3d.hs  Model.hs  Models.hs  NEDPosition.hs  NEDVector.hs  NVector.hs  NedVector.hs  Neighbours.hs  Parse.hs  Parser.hs  Polygon.hs  Position.hs  Positions.hs  (+12 more)
test/Data/Geo/: Expectations.hs  JordParsingSpec.hs  JordSpec.hs
test/Data/Geo/Jord/: AngleSpec.hs  BearingSphericalSpec.hs  BodiesSpec.hs  ConversionSpec.hs  DurationSpec.hs  EarthSpec.hs  EcefSpec.hs  EllipsoidSpec.hs  EllipsoidalSpec.hs  EvalSpec.hs  Expectations.hs  FramesSpec.hs  GeoPosSpec.hs  GeocentricSpec.hs  GeodesicEllipsoidalSpec.hs  GeodesicSpec.hs  GeodesicSphericalSpec.hs  GeodeticSpec.hs  GeodeticsSpec.hs  (+24 more)
(+12 files in other folders)
