name:           jord
version:        0.1.0.0
synopsis:       TODO
description:    Please see the README on GitHub at <https://github.com/ofmooseandmen/jord#readme>
homepage:       https://github.com/ofmooseandmen/jord#readme
bug-reports:    https://github.com/ofmooseandmen/jord/issues
author:         Cedric Liegeois
maintainer:     ofmooseandmen@yahoo.com
copyright:      2018 Cedric Liegeois
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/ofmooseandmen/jord

library
  exposed-modules:
      Data.Geo.Jord
  other-modules:
      Paths_jord
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010
  ghc-options: -Wall

executable jord-exe
  main-is: Main.hs
  other-modules:
      Paths_jord
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , jord
  default-language: Haskell2010

test-suite jord-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_jord
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , jord
    , hspec == 2.*
  default-language: Haskell2010
